removed dependency on lombok